# stlt-login-form-test-app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml
mysql/: 01-create-db.sql  02-init-schema.sql  03-seed-data.sql  Dockerfile  init.sql
postgres/: 01-create-db.sql  02-init-schema.sql  03-seed-data.sql  db.sql  dockerfile  init.sql
sqlite/: init.sql  test.sqlite
supabase/: 01-init-schema.sql
